overflow fix

--- a/src/pages/trello/trello.css
+++ b/src/pages/trello/trello.css
@@ -9,5 +9,4 @@
   margin-top: 100px;
   gap: 10px;
   overflow: auto;
-  overflow-x: scroll;
 }
